# nsm-nitro-enclave-utils

./: .gitignore  Cargo.toml  README.md  ci.sh  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
data/certs/end/: ecdsa_p384_cert.pem  ecdsa_p384_key.pem
data/certs/int/: ecdsa_p384_cert.pem
data/certs/root/: ecdsa_p384_cert.pem
docs/: release.md
examples/client/: Cargo.toml  README.md
examples/client/src/: main.rs
examples/server/: Cargo.toml  README.md
examples/server/src/: main.rs
examples/service/: Cargo.toml  README.md
examples/service/src/: main.rs
nsm-nitro-enclave-utils/: Cargo.toml
nsm-nitro-enclave-utils-keygen/: Cargo.toml  README.md
nsm-nitro-enclave-utils-keygen/src/: lib.rs  main.rs
nsm-nitro-enclave-utils-keygen/src/encode/: der.rs  mod.rs  pem.rs
nsm-nitro-enclave-utils-keygen/tests/: cli.rs
nsm-nitro-enclave-utils/src/: api.rs  lib.rs  nsm.rs  pcr.rs  sign.rs  test_utils.rs  time.rs
nsm-nitro-enclave-utils/src/driver/: mod.rs  nitro.rs
nsm-nitro-enclave-utils/src/driver/dev/: driver.rs  mod.rs  sign.rs
nsm-nitro-enclave-utils/src/nsm/: dev.rs  mod.rs  nitro.rs
nsm-nitro-enclave-utils/src/nsm/dev/: mod.rs  nsm.rs
nsm-nitro-enclave-utils/src/phony/: mod.rs  pcrs.rs
nsm-nitro-enclave-utils/src/verify/: cert.rs  mod.rs
nsm-nitro-enclave-utils/wasm_test_data/: README.md  created_at.txt
nsm-nitro-enclave-utils/wasm_test_data/end/: ecdsa_p384_cert.pem  ecdsa_p384_key.pem
nsm-nitro-enclave-utils/wasm_test_data/int/: ecdsa_p384_cert.pem  ecdsa_p384_key.pem
nsm-nitro-enclave-utils/wasm_test_data/root/: ecdsa_p384_cert.pem  ecdsa_p384_key.pem
scripts/: create_chain.sh  create_end_cert.sh  create_int_cert.sh  create_root_cert.sh  create_wasm_test_data.sh
scripts/ci/: test_wasm.sh
src/: api.rs  cert.rs  decoder.rs  encoder.rs  lib.rs  nsm.rs  pcrs.rs  phony.rs  sign.rs  signer.rs  test_utils.rs  verifier.rs
src/phony/: mod.rs  pcrs.rs
src/verify/: cert.rs  mod.rs
test_data/: README.md  created_at.txt  end-certificate.der  end-signing-key.der  int-certificate.der  root-certificate.der
test_data/end/: ecdsa_p384_key.pem
test_data/int/: ecdsa_p384_key.pem
test_data/root/: ecdsa_p384_key.pem
