[package]
name = "nsm-nitro-enclave-utils-keygen"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
x509-cert = { version = "0.2", features = ["builder"] }
p384 = { version = "0.13", features = ["alloc", "pkcs8", "pem"]}
rand = { version = "0.9" }
sha2 = { version = "0.10", features = ["oid"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sec1 = "0.7"
