[package]
name = "nsm-nitro-enclave-utils-keygen"
version = "0.1.4"
edition = "2021"
description = "A key generation utility for nsm-nitro-enclave-utils, used to generate self-signed certificate chains for local development with AWS Nitro Enclaves."
license = "MPL-2.0"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nsm-keygen"
path = "src/main.rs"

[dependencies]
x509-cert = { version = "0.2", features = ["builder"] }
p384 = { version = "0.13", features = ["alloc", "pkcs8", "pem"]}
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = { version = "0.10", features = ["oid"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sec1 = "0.7"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
