[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
nsm-nitro-enclave-utils = { path = "../../nsm-nitro-enclave-utils", features = [
    "verify",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
x509-cert = "0.2"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
