[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
dev = []

[dependencies]
nsm-nitro-enclave-utils = { path = "../../nsm-nitro-enclave-utils" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
x509-cert = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
